Altered CSS, Folders and WARNING added

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+/*
+
+<<RULES>>
+
+*/
+
+/*Import Fonts from GOOGLE FONT [Free Fonts] https://fonts.google.com/*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+/*Global Styles --- Just Import App.js wherever needed*/
+
+*{
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 .App {
   text-align: center;
 }
