Update Employee and Panel Member with BACKGROUNDIMAGE

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  background-image: url("./assets/bgimage.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +14,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.bg-custom{
+  background-image: linear-gradient(45deg, #114455, #292929);
 }
